--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -78,6 +78,7 @@ ul li {
 }
 .social-block li a:hover, .social-block li a:focus {
   color: #000;
+  text-decoration: none;
 }
 
 .btn.active.focus,
@@ -231,6 +232,8 @@ ul li {
 /* Button 1e */
 .btn-1e {
   overflow: hidden;
+  position: relative;
+  top: 20px;
 }
 
 .btn-1e:after {
@@ -376,7 +379,7 @@ ul li {
 .site-header {
   width: 100%;
   height: 100%;
-  min-height: 100vh;
+  min-height: 105vh;
   position: relative;
   text-align: center;
   background: url(../images/backgrounds/header.jpg) no-repeat center center/cover;
@@ -402,10 +405,12 @@ ul li {
   margin-top: 0px;
   font-size: 25px;
   font-weight: 300;
+  line-height: 1.5em;
 }
 .site-header .intro h1 {
   margin-top: 0px;
-  font-size: 30px;
+  font-size: 45px;
+  line-height: 1.5em;
 }
 .site-header .intro p {
   font-size: 20px;
@@ -430,7 +435,7 @@ ul li {
 /* 
  * 6.1 Section: About 
  */
-.about .section-title {
+.section-title {
   margin: 0 0 25px;
   text-align: center;
 }
@@ -466,6 +471,9 @@ ul li {
 }
 .speaker p {
   margin-bottom: 5px;
+}
+.speaker img{
+  border-radius: 50%;
 }
 .speaker img:hover {
   opacity: .7;
