--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -662,6 +662,11 @@ ul li {
   .grid-item-md-3 {
     width: 25%;
   }
+  @media (min-width: 480px){
+    .site-header .intro h1 {
+      font-size: 30px;
+}
+  }
 }
 /* 
  * 7.0 Site-footer
